# path_tracer

./: CMakeLists.txt  makefile  notes.txt
data/ply/: bunny_unit.ply  cornell_box.ply  cube.ply  floor.ply  isosphere.ply  plane.ply  test.ply
data/scenes/: ortho.scene  test.scene
src/: CMakeLists.txt  aabb.cpp  aabb.h  camera.h  colour.h  config.i  display.h  intersection.cpp  intersection.h  kdtree.cpp  kdtree.h  light.h  main.cpp  mesh.cpp  mesh.h  object.h  ply.h  ray.cpp  ray.h  scene.cpp  scene.h  sphere.cpp  sphere.h  types.h
